summit/scss/general-events-landing-page.scss
/* ... */
.all-summit .summits-wrap .video-container .item .video .triangle p {
    text-align: center;
    transform: rotate(-45deg);
    top: -70px;
    position: absolute;
    color: #fff;
    left: 0;
    text-transform: uppercase;
}

.all-summit .summits-wrap .video-container .item .video .triangle-new p {
    text-align: left;
    transform: rotate(-45deg);
    top: -70px;
    position: absolute;
    color: #fff;
    left: 0;
    text-transform: uppercase;
}
.all-summit .summits-wrap .video-container .item h5 {
    color: #00468B;
    margin-bottom: 1em;
}

.all-summit .summits-wrap .video-container .item h4 {
    color: #00468B;
    margin: 1em 0 0.2em;
}

.all-summit .summits-wrap .video-container .item .btn {
    background-color: #00468B;
    text-transform: capitalize;
    padding: 0.5em 1em;
    font-size: 1.2em;
    font-family: "Gotham Narrow Book";
}

.all-summit .summits-wrap .video-container .item .btn.red {
    background-color: #ED1944;
}

.all-summit .summits-wrap .video-container.first .video {
    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE1-960X540.png) center top no-repeat;
}

.all-summit .summits-wrap .video-container.second .video {
    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE2-960X540.png) center top no-repeat;
}

.all-summit .summits-wrap .video-container.last .video {
    background: url(https://object-storage-ca-ymq-1.vexxhost.net/swift/v1/6e4619c416ff4bd19e1c087f27a43eea/www-assets-prod/VE3-960X540.png) center top no-repeat;
}

.all-summit .summits-wrap .timeline h3 {
    text-align: center;
    margin: 0;
}

.all-summit .summits-wrap .timeline span {
    background: url(../images/home/timeline.svg) center top no-repeat;
    height: 18em;
    width: 100%;
    display: inline-block;
    background-size: 100%;
    margin-top: 2em;
    max-height: 215px;
}

.all-summit .summits-wrap .video-container {
    padding-right: 15px;
    padding-left: 15px;
}

.all-summit .what-to-expect {
    background-color: #000;
    color: #fff;
}

.all-summit .what-to-expect h3 {
    color: #fff;
    text-align: center;
    margin: 0 0 2em;
}

.all-summit .what-to-expect .text-container {
    background-color: #00468B;
    color: #fff;
    min-height: 20em;
    padding: 3em 4em;
}

.all-summit .what-to-expect .text-container h4 {
    color: #fff;
    font-size: 1.5em;
    margin-bottom: 1.5em;
}

.all-summit .what-to-expect .text-container a, .all-summit .what-to-expect .text-container a:visited, .all-summit .what-to-expect .text-container a:hover {
    color: #fff;
    padding: 0;
    margin-top: 1em;
    text-decoration: none;
}

.all-summit .what-to-expect .text-container a:hover {
    text-decoration: underline;
}

.all-summit .video-container {
    padding: 0;
    margin: 0;
}

a.photo-credit {
    bottom: 10px;
    right: 20px;
}

.all-summit .video-container .video {
    background-size: cover !important;
}

.all-summit .what-to-expect .video-container .video.first {
    background: url(../images/home/what-1.jpg) center top no-repeat;
}

.all-summit .what-to-expect .video-container .video.second {
    background: url(../images/home/what-2.jpg) center top no-repeat;
}

.all-summit .what-to-expect .video-container .video.third {
    background: url(../images/home/what-3.jpg) center top no-repeat;
}

.all-summit .what-to-expect .video-container .video.last {
    background: url(../images/home/what-4.jpg) center top no-repeat;
}

.all-summit .diverse {
    background-color: #00468B;
    padding: 0;
    height: 60vh;
    text-align: left;
    max-height: 520px;
    min-height: 500px;
}

.all-summit .diverse .image {
    padding: 0;
    height: 60vh;
    background-size: cover;
    max-height: 520px;
    min-height: 500px;
}

.all-summit .diverse.what-to-expect .image {
    background: url(../images/home/who.jpg) center no-repeat;
    background-size: cover;
    height: 80vh;
    min-height: 600px;
    max-height: 620px;
}

.all-summit .diverse.what-to-expect .text-container h3 {
    text-align: center;
    margin: 1em 0 2em;
}

.all-summit .diverse.what-to-expect .text-container h5 {
    text-align: center;
    margin: 2em 0;
    color: #fff;
    font-size: 1.2em;
}

.all-summit .diverse.what-to-expect .text-container .attends li {
    color: #fff;
}

.all-summit .diverse.what-to-expect .text-container .attends li span.architecture {
    background-image: url("../images/stock-white.svg");
}

.all-summit .diverse.what-to-expect .text-container .attends li span.platform {
    background-image: url("../images/cell-white.svg");
}

.all-summit .diverse.what-to-expect .text-container .attends li span.bussiness {
    background-image: url("../images/suitcase-white.svg");
}

.all-summit .diverse.what-to-expect .text-container .attends li span.upstream {
    background-image: url("../images/code-white.svg");
}

.all-summit .diverse.what-to-expect .text-container {
    background-color: transparent;
    color: #fff;
    height: auto;
    padding: 6em 7em 2em 2em;
}

.all-summit .summit-sponsor {
    background-color: #ED1944;
    color: #fff;
    text-align: center;
    padding: 1em 0 2em;
}

.all-summit .summit-sponsor h3 {
    color: #fff;
}

.all-summit .summit-sponsor .btn {
    border-color: #fff;
    color: #fff;
}

.all-summit .summit-sponsor .btn i {
    color: #fff;
}

.all-summit .summit-sponsor .text {
    width: 80%;
}

.all-summit .summit-register {
    background-color: #00468B;
    text-align: center;
    color: #fff;
    padding: 1em 0 4em;
}

.all-summit .summit-register h3 {
    color: #fff;
}

.all-summit .summit-register .btn {
    border-color: #fff;
    color: #fff;
    margin-top: 2em;
    padding: 0.75em 1.5em;
}

.all-summit .summit-register .btn i {
    color: #fff;
}

.all-summit .academy-wrapper .carousel .carousel-control span i {
    color: #e0e0e0;
    font-size: 3em;
}
/* ... */

